UCoS/Micrium_2/Software/EvalBoards/Cypress/CY8CKIT-050/PSoC/uCOS-III-Probe/uCOS-III-Probe.cydsn/BUILD.log
--------------- Build Started: 10/20/2022 08:44:37 Project: uCOS-III-Probe, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I..\..\uCOS-III-Probe -I..\..\BSP -I..\..\BSP\OS\uCOS-III -I..\..\..\..\..\..\uC-CPU\ARM-Cortex-M3\GNU -I..\..\..\..\..\..\uC-CPU -I..\..\..\..\..\..\uC-LIB -I..\..\..\..\..\..\uCOS-III\Source -I..\..\..\..\..\..\uCOS-III\Ports\ARM-Cortex-M3\Generic\GNU -I..\..\..\..\..\..\uC-Probe\Target\Communication\Generic\OS\uCOS-III -I..\..\..\..\..\..\uC-Probe\Target\Communication\Generic\RS-232\OS\uCOS-III -I..\..\..\..\..\..\uC-Probe\Target\Communication\Generic\RS-232\Ports\Cypress\PSoC5 -I..\..\..\..\..\..\uC-Probe\Target\Communication\Generic\RS-232\Source -I..\..\..\..\..\..\uC-Probe\Target\Communication\Generic\Source -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/app.lst -g -ffunction-sections -ffat-lto-objects -O0 -c ..\app.c -o .\ARM_GCC_541\Debug\app.o
..\app.c: In function 'Pin_BP01_Handler':
..\app.c:233:5: warning: implicit declaration of function 'Pin_BP01_ClearInterrupt' [-Wimplicit-function-declaration]
     Pin_BP01_ClearInterrupt();                       /* limpando flag de interrupção do botão */
     ^
..\app.c: In function 'Pin_BP02_Handler':
..\app.c:262:5: warning: implicit declaration of function 'Pin_BP02_ClearInterrupt' [-Wimplicit-function-declaration]
     Pin_BP02_ClearInterrupt();                       /* limpando flag de interrupção do botão */
     ^
..\app.c: In function 'main':
..\app.c:291:5: warning: implicit declaration of function 'se_indut_porta_int_StartEx' [-Wimplicit-function-declaration]
     se_indut_porta_int_StartEx(se_indut_porta_Handler);         // habilita ISR do pino
     ^
..\app.c:292:5: warning: implicit declaration of function 'se_indut_motor_int_StartEx' [-Wimplicit-function-declaration]
     se_indut_motor_int_StartEx(se_indut_motor_Handler);         // habilita ISR do pino
     ^
..\app.c:293:5: warning: implicit declaration of function 'bt_emerg_int_StartEx' [-Wimplicit-function-declaration]
     bt_emerg_int_StartEx(bt_emerg_int_Handler);                 // habilita ISR do pino
     ^
..\app.c: In function 'App_Task_Ihm':
..\app.c:564:12: warning: implicit declaration of function 'bt_liga_Read' [-Wimplicit-function-declaration]
         if(bt_liga_Read() && !emerg && !rearme && !alerta){ // botao liga pressionado caso nao esteja em status de emergencia, rearme ou alerta
            ^
..\app.c:566:13: warning: implicit declaration of function 'ct_motor_Write' [-Wimplicit-function-declaration]
             ct_motor_Write(1);                              // aciona o contator de potencia
             ^
..\app.c:567:13: warning: implicit declaration of function 'si_liga_Write' [-Wimplicit-function-declaration]
             si_liga_Write(1);                               // aciona sinaleiro de motor ligado
             ^
..\app.c:568:13: warning: implicit declaration of function 'si_desl_Write' [-Wimplicit-function-declaration]
             si_desl_Write(0);                               // deslig sinaleiro de motor desligado
             ^
..\app.c:573:12: warning: implicit declaration of function 'bt_desl_Read' [-Wimplicit-function-declaration]
         if(bt_desl_Read()){                                 // caso botao desliga seja pressionado
            ^
..\app.c:581:12: warning: implicit declaration of function 'bt_rearme_Read' [-Wimplicit-function-declaration]
         if(bt_rearme_Read() && !emerg && !alerta){          // ativa rearme apenas se botao for pressionado e nao estiver em condicao adversa
            ^
..\app.c:583:13: warning: implicit declaration of function 'si_rearme_Write' [-Wimplicit-function-declaration]
             si_rearme_Write(0);                             // desativa sinaleira de rearme
             ^
..\app.c: In function 'App_Task_Emerg':
..\app.c:606:13: warning: implicit declaration of function 'si_emerg_Write' [-Wimplicit-function-declaration]
             si_emerg_Write(1);                              // ativa sinaleira de emerg.
             ^
..\app.c:607:13: warning: implicit declaration of function 'al_sonoro_Write' [-Wimplicit-function-declaration]
             al_sonoro_Write(1);                             // aciona alarme sonoro
             ^
..\app.c:617:13: warning: implicit declaration of function 'bt_emerg_Read' [-Wimplicit-function-declaration]
         if(!bt_emerg_Read()){                               // se o botao foi liberado libera a emergencia
             ^
..\app.c: In function 'App_Task_Sen_Mec':
..\app.c:637:13: warning: implicit declaration of function 'si_alerta_Write' [-Wimplicit-function-declaration]
             si_alerta_Write(1);                             // ativa sinaleira de emerg.
             ^
..\app.c: In function 'App_Task_Sen_Temp':
..\app.c:660:5: warning: implicit declaration of function 'ADC_SAR_Seq_Start' [-Wimplicit-function-declaration]
     ADC_SAR_Seq_Start();
     ^
..\app.c:665:5: warning: implicit declaration of function 'ADC_SAR_Seq_StartConvert' [-Wimplicit-function-declaration]
     ADC_SAR_Seq_StartConvert();
     ^
..\app.c:668:9: warning: implicit declaration of function 'ADC_SAR_Seq_IsEndConversion' [-Wimplicit-function-declaration]
         ADC_SAR_Seq_IsEndConversion(ADC_SAR_Seq_WAIT_FOR_RESULT);
         ^
..\app.c:668:37: error: 'ADC_SAR_Seq_WAIT_FOR_RESULT' undeclared (first use in this function)
         ADC_SAR_Seq_IsEndConversion(ADC_SAR_Seq_WAIT_FOR_RESULT);
                                     ^
..\app.c:668:37: note: each undeclared identifier is reported only once for each function it appears in
..\app.c:669:17: warning: implicit declaration of function 'ADC_SAR_Seq_GetResult16' [-Wimplicit-function-declaration]
         temp1 = ADC_SAR_Seq_GetResult16(0u);
                 ^
..\app.c: In function 'go_to_E1':
..\app.c:1218:9: warning: implicit declaration of function 'Pin_SV01_VE_Write' [-Wimplicit-function-declaration]
         Pin_SV01_VE_Write(0u);                            /* sem. t. aberto  */
         ^
..\app.c:1219:9: warning: implicit declaration of function 'Pin_SV01_AM_Write' [-Wimplicit-function-declaration]
         Pin_SV01_AM_Write(0u);                            /* sem. t. fechado */
         ^
..\app.c:1220:9: warning: implicit declaration of function 'Pin_SV01_VM_Write' [-Wimplicit-function-declaration]
         Pin_SV01_VM_Write(1u);                            /* sem. t. fechado */
         ^
..\app.c:1222:9: warning: implicit declaration of function 'Pin_SP01_VE_Write' [-Wimplicit-function-declaration]
         Pin_SP01_VE_Write(1u);                            /* sem. p. aberto  */
         ^
..\app.c:1223:9: warning: implicit declaration of function 'Pin_SP01_VM_Write' [-Wimplicit-function-declaration]
         Pin_SP01_VM_Write(0u);                            /* sem. p. fechado */
         ^
..\app.c:1227:9: warning: implicit declaration of function 'Pin_SV02_VE_Write' [-Wimplicit-function-declaration]
         Pin_SV02_VE_Write(0u);                            /* sem. t. aberto  */
         ^
..\app.c:1228:9: warning: implicit declaration of function 'Pin_SV02_AM_Write' [-Wimplicit-function-declaration]
         Pin_SV02_AM_Write(0u);                            /* sem. t. fechado */
         ^
..\app.c:1229:9: warning: implicit declaration of function 'Pin_SV02_VM_Write' [-Wimplicit-function-declaration]
         Pin_SV02_VM_Write(1u);                            /* sem. t. fechado */
         ^
..\app.c:1231:9: warning: implicit declaration of function 'Pin_SP02_VE_Write' [-Wimplicit-function-declaration]
         Pin_SP02_VE_Write(1u);                            /* sem. p. aberto  */
         ^
..\app.c:1232:9: warning: implicit declaration of function 'Pin_SP02_VM_Write' [-Wimplicit-function-declaration]
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
         Pin_SP02_VM_Write(0u);                            /* sem. p. fechado */
         ^
--------------- Build Failed: 10/20/2022 08:44:38 ---------------
